fix footer align

--- a/app/assets/stylesheets/_layouts.scss
+++ b/app/assets/stylesheets/_layouts.scss
@@ -14,9 +14,11 @@
   }
 }
 
-.footer {
-  margin-top: 40px;
+footer.footer {
+  margin-top: 20px;
   border-top: $primary solid 1px;
-  text-align: center;
-  padding-top: 5px;
+  .container p {
+    text-align: center;
+    padding-top: 10px;
+  }
 }
